# OxideGate

./: .gitignore  Cargo.toml  README.md
.atl/: skill-registry.md
docs/: benchmark.md  context-tax.md  findings.md  monitor-tui.md  optimizer-claude-md.md  optimizer-dedup.md  optimizer-prompt-cache.md  optimizer-tool-search.md  provider-adapters.md  speed.md  telemetry-by-model.md  telemetry-level-1.md  telemetry-per-request.md
openspec/: config.yaml
openspec/changes/codex-quota-telemetry/: design-tui-slice.md  design.md  exploration.md  proposal.md  spec.md  tasks.md
openspec/changes/session-attribution/: design.md  exploration.md  proposal.md  spec.md  tasks.md
src/: config.rs  main.rs  state.rs
src/middleware/: health.rs  mod.rs  proxy.rs  requests.rs  stats.rs
src/optimizer/: cache.rs  mod.rs
src/provider/: anthropic.rs  gemini.rs  mod.rs  openai.rs
src/telemetry/: codex_quota.rs  logger.rs  metered.rs  mod.rs  pricing.rs  recent.rs  session.rs  stats.rs
