[package]
name = "oxidegate"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
bytes = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
