[package]
name = "oxidegate"
version = "0.2.1"
edition = "2024"
license = "MIT"

# Los binarios se declaran a mano: la autodetección de Cargo los llamaría
# `monitor` y `bench`, nombres demasiado genéricos para instalarse en el PATH
# del usuario (`cargo install`, formula de Homebrew). El prefijo `oxidegate-`
# los mantiene inconfundibles.
[[bin]]
name = "oxidegate"
path = "src/main.rs"

[[bin]]
name = "oxidegate-monitor"
path = "src/bin/monitor.rs"

[[bin]]
name = "oxidegate-bench"
path = "src/bin/bench.rs"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
reqwest = { version = "0.12", features = ["stream", "json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
bytes = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
ratatui = "0.29"
crossterm = "0.28"
zstd = "0.13"
flate2 = "1"
